--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title></title>
     </head>
     <body>
-        Hello Word By. Dina
+
+        <img src="tess.jpg">
+        <h1>Dina </h1>
     </body>
 </html>
